--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3077,5 +3077,16 @@ ul li {
     margin-bottom: 15px !important;
 }
 
+#campus-ideation .campus-ideation-image {
+    text-align: center; /* Centers the image horizontally */
+    margin-top: 20px; /* Optional: Adds space between the text and the image */
+}
+
+#campus-ideation .campus-ideation-image img {
+    width: 100%; /* Makes image responsive */
+    max-width: 1100px; /* Optional: Sets a maximum width for the image */
+    height: auto; /* Maintains the aspect ratio */
+    display: inline-block; /* Ensures image is treated as block element for proper centering */
+}
 
 
